--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
       with:
         version: '3.1.100'
 
+    - name: Setup Nuget.exe
+      uses: NuGet/setup-nuget@v1.0.2
+      with:
+        nuget-version: 'latest'
+
     - name: Build with dotnet
       run: |
         nuget sources Add -Name "GPR" -Source "https://nuget.pkg.github.com/aklein53/index.json" -Username aklein53 -Password ${{ secrets.GITHUB_TOKEN }}
