Added installer projects. Added icon for Commander and installers.

--- a/LCTFCommander/LCTFCommander.csproj
+++ b/LCTFCommander/LCTFCommander.csproj
@@ -11,6 +11,7 @@
     <Description>A tool for controlling ChemImage LCTFs.</Description>
     <RepositoryUrl>https://github.com/aklein53/LCTFCommander</RepositoryUrl>
     <PackageProjectUrl>https://github.com/aklein53/LCTFCommander</PackageProjectUrl>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
