--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,4 +23,5 @@ jobs:
     - name: Build with dotnet
       run: |
         nuget sources Add -Name "GPR" -Source "https://nuget.pkg.github.com/ChemImageFT/index.json" -Username aklein53 -Password ${{ secrets.nugetToken }}
-        dotnet build "src/LCTF SDK.sln" --configuration Release
+        msbuild Installer/SdkSetup.wixproj
+        msbuild Installer/SdkBootstrapper.wixproj
