Need to checkout code...

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,6 +6,8 @@ jobs:
   makemanual:
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v2
+
       - name: Create PDF
         uses: docker://pandoc/latex:2.9
         with:
