Added spectral range to Commander. Updated user manual. Removed attempt at generating PDF manual in workflow.

--- a/src/LCTFCommander/LCTFCommander.csproj
+++ b/src/LCTFCommander/LCTFCommander.csproj
@@ -15,7 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="LCTFCommanderUserManual.docx" />
     <None Remove="Resources\logo-transparent.png" />
+    <None Remove="~%24TFCommanderUserManual.docx" />
   </ItemGroup>
 
   <ItemGroup>
