--- a/src/LCTFCommander/LCTFCommander.csproj
+++ b/src/LCTFCommander/LCTFCommander.csproj
@@ -11,7 +11,7 @@
     <Description>A tool for controlling ChemImage LCTFs.</Description>
     <RepositoryUrl>https://github.com/aklein53/LCTFCommander</RepositoryUrl>
     <PackageProjectUrl>https://github.com/aklein53/LCTFCommander</PackageProjectUrl>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>whiteIcon.ico</ApplicationIcon>
     <Version>1.1.0</Version>
   </PropertyGroup>
 
