Updated to organization secret nuget token. Reverted to manual SDK package versioning. Added visual element manifest to control start menu background color.

--- a/src/LCTFCommander/LCTFCommander.csproj
+++ b/src/LCTFCommander/LCTFCommander.csproj
@@ -36,4 +36,10 @@
     <Resource Include="Resources\logo-transparent.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="LCTFCommander.visualelementsmanifest.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
